--- a/dance/templates/dance/step_detail.html
+++ b/dance/templates/dance/step_detail.html
@@ -33,7 +33,7 @@
                             <div class="col-xs-12">
                                 <div class="box">
                                     <div class="row">
-                                        <a href="{{ cat_video.data.url }}?t={{ cat_video.time }}">
+                                        <a href="{{ cat_video.data.url }}&t={{ cat_video.time }}">
                                         <!-- Switch for  <a href="{ % url 'dance:cat_video_detail' cat_video_id=cat_video.id % }"> -->
                                             <img class="img-responsive" src="https://img.youtube.com/vi/{{ cat_video.data.yid }}/hqdefault.jpg" alt="{{cat_video.title}}" />
                                         </a>
