--- a/dance/templates/dance/base.html
+++ b/dance/templates/dance/base.html
@@ -10,10 +10,11 @@
 
     <link href="{% static 'dance/css/bootstrap.min.css' %}" rel="stylesheet" />
     <link href="{% static 'dance/css/main.css' %}" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   </head>
   <body>
     <div class="s003">
-      <form action="{% url 'dance:search' %}" name="search_form" method="get" accept-charset="utf-8">
+      <form action="{% url 'dance:step_search' %}" name="search_form" method="get" accept-charset="utf-8">
         <div class="inner-form">
           <div class="input-field first-wrap">
             <div class="input-select">
