--- a/dance/templates/dance/create_step.html
+++ b/dance/templates/dance/create_step.html
@@ -5,13 +5,22 @@
 <div class="col">
     <div class="row">
         <div class="col-lg-12 detail-separator">
-          <form class="col-md-6 col-md-offset-3 text-center" action="{% url 'dance:video_creation' %}" method="post" accept-charset="utf-8">
-            {% csrf_token %}
-            <div class="form-group">
-              <label for="createVideoForm">Add a video</label>
-              <input id="createVideoForm" class="form-control" name="videoUrl" />
-            </div>
-            <span class="help-block" id="helpBlock">Paste in here the link to the video you want to add.</span>
+          <form class="col-md-6 col-md-offset-3 text-center" action="{% url 'dance:step_creation' %}" method="post" accept-charset="utf-8">
+               {% csrf_token %}
+                <div class="form-group {% if form.name.errors %}has-warning has-feedback{% endif %}">
+                  <label for="{{ form.name.id_for_label }}" class="control-label">Step name</label>
+                  {{ form.name }}
+                </div>
+                <div class="form-group {% if form.creator.errors %}has-warning has-feedback{% endif %}">
+                  <label for="{{ form.creator.id_for_label }}" class="control-label">Creator</label>
+                  {{ form.creator }}
+                </div>
+                <div class="form-group {% if form.school.errors %}has-warning has-feedback{% endif %}">
+                  <label for="{{ form.school.id_for_label }}" class="control-label">School</label>
+                  {{ form.school }}
+                </div>
+                <button type="submit" class="btn btn-success">Add</button>
+            <span class="help-block" id="helpBlock">Add a new step.</span>
           </form>
         </div>
     </div>
